# rusty_axe

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  compile.yml  master.yml
src/: main.rs
tests/fixtures/: lorem-ipsum-5.txt
